# rycsv

./: README.md  links_gitclones.txt
Proyecto/rover_rycsv/: CMakeLists.txt  README.md  package.xml
Proyecto/rover_rycsv/launch/: empty_map.launch  only_map.launch  run_proyect.launch
Proyecto/rover_rycsv/urdf/: rover.csv  rover.urdf.xacro
Talleres/kobuki_exer2/: README.md
Talleres/kobuki_exer2/cfg/: param_test.cfg
Talleres/kobuki_exer2/scripts/: move_cmd.py  move_node.py
Talleres/kobuki_lidar/: CMakeLists.txt  README.md  package.xml
Talleres/kobuki_lidar/config/: parameters.yaml
Talleres/kobuki_lidar/launch/: target_world.launch
Talleres/kobuki_lidar/rviz/: config.rviz
Talleres/kobuki_lidar/scripts/: arbol.py  class_TF.py  class_control_motores.py  class_lecture_key.py  class_load_map.py  class_planning.py  class_seguimiento_polar.py  planning_node.py  prueba.py  seguimiento_node.py
Talleres/kobuki_lidar/urdf/: kobuki_lidar.urdf.xacro  lidar.gazebo.xacro
Talleres/kobuki_trayectory/: CMakeLists.txt  README.md  package.xml
Talleres/kobuki_trayectory/config/: parameters.yaml
Talleres/kobuki_trayectory/launch/: world.launch
Talleres/kobuki_trayectory/launch/includes/: robot.launch.xml
Talleres/kobuki_trayectory/scripts/: class_TF.py  class_controlador2_lineal.py  class_controlador_polar.py  controlador_node.py
Talleres/kobuki_trayectory/urdf/: kobuki_camera.urdf.xacro
Talleres/kobuki_trayectory/worlds/: taller2.world
Talleres/ros_robotic/: CMakeLists.txt  README.md
Talleres/ros_robotic/config/: ddrobot_ctroller.yaml
Talleres/ros_robotic/launch/: ddrobot_gazebo.launch  ddrobot_load.launch  ddrobot_rviz.launch  view_model.launch
Talleres/ros_robotic/scripts/: class_model.py
Talleres/ros_robotic/urdf/: dd_robot.urdf
Tareas/model_robot_2_rycsv/: CMakeLists.txt  README.md  package.xml
Tareas/model_robot_2_rycsv/script/: class_comms.py  class_model.py
git_clones/husky_rycsv/: package.xml
git_clones/husky_rycsv/launch/: husky_simulation.launch
git_clones/localizacion_amcl_example/launch/: localization_amcl.launch  map_loader.launch
git_clones/localizacion_amcl_example/rviz/: config.rviz
git_clones/param_server_example/: CMakeLists.txt  README.md  package.xml
git_clones/param_server_example/cfg/: param_test.cfg
git_clones/param_server_example/config/: parameters.yaml
git_clones/param_server_example/launch/: param_test.launch
git_clones/param_server_example/scripts/: ParamTestClass.py  param_test.py
git_clones/robots_rycsv_description/: CMakeLists.txt  README.md  package.xml
git_clones/robots_rycsv_description/config/: exer_robot_ctroller.yaml  test_robot_ctroller.yaml
git_clones/robots_rycsv_description/launch/: robot_exer_simulation.launch  robot_test_simulation.launch  view_model.launch
git_clones/robots_rycsv_description/meshes/: base_robot_test.stl
git_clones/robots_rycsv_description/rviz/: robot_test_rviz.rviz
git_clones/robots_rycsv_description/urdf/: robot_exer.urdf.xacro  robot_test.urdf.xacro  swedish_wheel.urdf.xacro
