<?xml version="1.0"?>
<package format="2">
  <name>kobuki_trayectory</name>
  <version>1.0.0</version>
  <description>The kobuki_trayectory package</description>

  <maintainer email="jdcaballeroco@unal.edu.co">Jesus Caballero</maintainer>
  <maintainer email="sccortessa@unal.edu.co">Sebastian Cortes</maintainer>
  <maintainer email="hmontes@unal.edu.co">Hector Montes</maintainer>
  <maintainer email="jhiguera@unal.edu.co">Johan Higuera</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  

  <build_depend>ar_track_alvar</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_description</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>yocs_cmd_vel_mux</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>
  <build_depend>kobuki_random_walker</build_depend>
  <build_depend>kobuki_safety_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>ar_track_alvar</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>kobuki_description</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>yocs_cmd_vel_mux</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>kobuki_gazebo_plugins</build_export_depend>
  <build_export_depend>kobuki_random_walker</build_export_depend>
  <build_export_depend>kobuki_safety_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>kobuki_gazebo_plugins</exec_depend>
  <exec_depend>kobuki_random_walker</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_roxs gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
