<?xml version="1.0"?>
<package format="2">
  <name>model_robot_2_rycsv</name>
  <version>0.0.1</version>
  <description>Tarea 3 extrapuntos - Robot 2: Control movimiento y ecuaciones cinemáticas</description>

  <maintainer email="jdcaballeroco@unal.edu.co">Jesus Caballero</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export> </export>

</package>
